default text transformations working

--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <title>Hello Blogo!!</title>
   </head>
   <body>
-    <div id="main">
-      <h1 contenteditable="true">Editable Title</h1>
-      <div class="editable-area">
-        <span contenteditable="true">Lorem Ipsum...</span>
-      </div>
+    <div contenteditable="true" id="main">
+      <h1>Editable Title</h1>
+      <span>Lorem ipsum...</span>
     </div>
     <script src="dist/bundle.js"></script>
   </body>
