--- a/index.html
+++ b/index.html
@@ -3,12 +3,32 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello Blogo!!</title>
+    <style>
+      body {
+        width: 75%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto
+      }
+    </style>
   </head>
   <body>
     <div contenteditable="true" id="main">
-      <h1>Editable Title</h1>
-      <span>Lorem ipsum...</span>
+      <header>
+        <h1>Editable Title</h1>
+      </header>
+      <span>Lorem ipsum dolor sit amet, iudico invidunt neglegentur no has. Impetus civibus minimum his id. Clita pericula in mel, pri id accusam luptatum perfecto. Est ut justo perpetua. Eum cibo dignissim cu, vis aliquam phaedrum constituto in. Vim ne elitr deseruisse, ne verear inermis 
+        scripserit qui.
+      </span>
     </div>
+    <br />
+    <label>Shortcuts:</label>
+    <ul>
+      <li> ctrl + b : bold</li>
+      <li> ctrl + i : italic</li>
+      <li> ctrl + u : underline</li>
+    </ul>
+      
     <script src="dist/bundle.js"></script>
   </body>
 </html>
