fixing a few stuff and making it safe

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
       <header>
         <h1>Editable Title</h1>
       </header>
-      <span>Lorem ipsum dolor sit amet, iudico invidunt neglegentur no has. Impetus civibus minimum his id. Clita pericula in mel, pri id accusam luptatum perfecto. Est ut justo perpetua. Eum cibo dignissim cu, vis aliquam phaedrum constituto in. Vim ne elitr deseruisse, ne verear inermis 
-        scripserit qui.
-      </span>
+      <div class="content">
+        <span>Lorem ipsum dolor sit amet, iudico invidunt neglegentur no has. Impetus civibus minimum his id. Clita pericula in mel, pri id accusam luptatum perfecto. Est ut justo perpetua. Eum cibo dignissim cu, vis aliquam phaedrum constituto in. Vim ne elitr deseruisse, ne verear inermis 
+          scripserit qui.
+        </span>
+      </div>
     </div>
     <br />
     <br />
@@ -29,7 +31,6 @@
       <li> ctrl + i : italic</li>
       <li> ctrl + u : underline</li>
     </ul>
-      
     <script src="dist/bundle.js"></script>
   </body>
 </html>
